修正事項完了

--- a/html/Home.html
+++ b/html/Home.html
@@ -8,14 +8,7 @@
 </head>
 
 <body>
-
-  <div class="  profile">
-    <canvas id="rectangle"></canvas>
-  </div>
-
-
-
-
+  <canvas id="rectangle" width="750" height="750"></canvas>
 
   <div class="test_but">
     <div class="row">
@@ -44,72 +37,18 @@
         <h1>良い口</h1>
       </button>
     </div>
+
+    <div class="row">
+      <button type="button" name="button" onclick="bad_all()">
+        <h1>Bad_ALL</h1>
+      </button>
+      <button type="button" name="button" onclick="good_all()">
+        <h1>GoodALL</h1>
+      </button>
+    </div>
   </div>
 
 
   <script src="../js/chapter_img_random.js"></script>
 </body>
 </html>
-
-<!-- <div class="profile">
-<h1>わなすか(TOP)</h1>
-<div class="profile_img relative">
-<img class="absolute" src="../raw/body_img.png" alt="胃の画像">
-<div class="character relative">
-<div class="head absolute">
-<img class="head_img" src="../raw/head/図0.png" alt="顔の輪郭画像" id = "myimage1">
-</div>
-<div class="eye absolute">
-<img class="eye_img" src="../raw/eye/図0.png" alt="目の画像" id = "myimage2">
-</div>
-<div class="mouth absolute">
-<img class="mouth_img" src="../raw/mouth/図0.png" alt="口の画像" id = "myimage3">
-</div>
-</div>
-</div>
-</div>
-<div class="test_but">
-<div class="row">
-<button type="button" name="button" onclick="bad_head()">
-<h1>悪い頭</h1>
-</button>
-<button type="button" name="button" onclick="good_head()">
-<h1>良い頭</h1>
-</button>
-</div>
-<div class="row">
-<button type="button" name="button" onclick="bad_eye()">
-<h1>悪い目</h1>
-</button>
-<button type="button" name="button" onclick="good_eye()">
-<h1>良い目</h1>
-</button>
-</div>
-<div class="row">
-<button type="button" name="button" onclick="bad_mouth()">
-<h1>悪い口</h1>
-</button>
-<button type="button" name="button" onclick="good_mouth()">
-<h1>良い口</h1>
-</button>
-</div>
-<div class="row">
-<h1>目の角度テストボタン</h1>
-<button type="button" name="button" onclick="bad_eye_test()">
-<h1>悪い目</h1>
-</button>
-<button type="button" name="button" onclick="good_eye_test()">
-<h1>良い目</h1>
-</button>
-</div>
-
-<div class="row">
-<h1>口の開きテストボタン</h1>
-<button type="button" name="button" onclick="open_mouth_test()">
-<h1>悪い口</h1>
-</button>
-<button type="button" name="button" onclick="close_mouth_test()">
-<h1>良い目</h1>
-</button>
-</div>
-</div> -->
