--- a/html/Home.html
+++ b/html/Home.html
@@ -28,6 +28,14 @@
         <h1>良い目</h1>
       </button>
     </div>
+    <!-- <div class="row">
+      <button type="button" name="button" onclick="change_eye(-1)">
+        <h1>悪い目</h1>
+      </button>
+      <button type="button" name="button" onclick="change_eye(1)">
+        <h1>良い目</h1>
+      </button>
+    </div> -->
 
     <div class="row">
       <button type="button" name="button" onclick="bad_mouth()">
