--- a/html/Home.html
+++ b/html/Home.html
@@ -18,58 +18,57 @@
     <main>
       <div class="row">
         <div class="offset-1 col-10">
-
           <div class="characterTraining">
             <canvas id="rectangle" width="750" height="800"></canvas>
-            <div class="">
-              <button class="btn btn-primary btn-lg">投稿</button>
-            </div>
+            <!-- <div class="">
+            <button class="btn btn-primary btn-lg">投稿</button>
+          </div> -->
+        </div>
+        <div class="DairyMission">
+          <div class="Title">
+            <h1>デイリーミッション</h1>
           </div>
-          <div class="DairyMission">
-            <div class="Title">
-              <h1>デイリーミッション</h1>
-            </div>
 
-            <div class="row">
-              <div class="MissionList form-check offset-1 col-10">
-                <div class="radio-inline">
-                  <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                  <label class="form-check-label" for="defaultCheck1">標準のチェックボックス</label>
-                </div>
+          <div class="row">
+            <div class="MissionList form-check offset-1 col-10">
+              <div class="radio-inline">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">標準のチェックボックス</label>
+              </div>
 
-                <div class="radio-inline">
-                  <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
-                  <label class="form-check-label" for="defaultCheck2">標準のチェックボックス</label>
-                </div>
-                <div class="radio-inline">
-                  <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                  <label class="form-check-label" for="defaultCheck3">標準のチェックボックス</label>
-                </div>
+              <div class="radio-inline">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                <label class="form-check-label" for="defaultCheck2">標準のチェックボックス</label>
+              </div>
+              <div class="radio-inline">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
+                <label class="form-check-label" for="defaultCheck3">標準のチェックボックス</label>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <footer class="fixed-bottom">
-      <div class="row">
-        <div class="col-4">
-          <i class="fab fa-twitter fa-4x"></i>
-        </div>
-        <div class="col-4">
-          <i class="fas fa-users fa-4x"></i>
-        </div>
-        <div class="col-4">
-          <i class="fas fa-cog fa-4x"></i>
-        </div>
+  <footer class="fixed-bottom">
+    <div class="row">
+      <div class="col-4">
+        <i class="fab fa-twitter fa-4x"></i>
       </div>
-    </footer>
-  </div>
+      <div class="col-4">
+        <i class="fas fa-users fa-4x"></i>
+      </div>
+      <div class="col-4">
+        <i class="fas fa-cog fa-4x"></i>
+      </div>
+    </div>
+  </footer>
+</div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="../js/chapter_img_random.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="../js/chapter_img_random.js"></script>
 </body>
 </html>
