--- a/html/Home.html
+++ b/html/Home.html
@@ -33,16 +33,16 @@
             <div class="MissionList form-check offset-1 col-10">
               <div class="radio-inline">
                 <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">標準のチェックボックス</label>
+                <label class="form-check-label" for="defaultCheck1">ガムを噛む</label>
               </div>
 
               <div class="radio-inline">
                 <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
-                <label class="form-check-label" for="defaultCheck2">標準のチェックボックス</label>
+                <label class="form-check-label" for="defaultCheck2">普段より30分早く寝る</label>
               </div>
               <div class="radio-inline">
                 <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                <label class="form-check-label" for="defaultCheck3">標準のチェックボックス</label>
+                <label class="form-check-label" for="defaultCheck3">その日の自分の良かった事を思い出す</label>
               </div>
             </div>
           </div>
