--- a/html/Home.html
+++ b/html/Home.html
@@ -5,8 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>わなすか|TOP</title>
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-  <link rel="stylesheet" href="../css/Home.css">
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"> -->
+  <link rel="stylesheet" href="../css/Home.css">
 </head>
 
 <body>
@@ -19,12 +19,9 @@
       <div class="row">
         <div class="offset-1 col-10">
           <div class="characterTraining">
-            <canvas id="rectangle" width="750" height="800"></canvas>
-            <!-- <div class="">
-            <button class="btn btn-primary btn-lg">投稿</button>
-          </div> -->
-        </div>
-        <div class="DairyMission">
+            <!-- <canvas id="rectangle" width="900" height="800"></canvas> -->
+            <canvas id="rectangle"></canvas>
+          </div>
           <div class="Title">
             <h1>デイリーミッション</h1>
           </div>
@@ -46,6 +43,8 @@
               </div>
             </div>
           </div>
+
+          <button type="button" name="button" id="but">テスト</button>
         </div>
       </div>
     </div>
@@ -66,7 +65,7 @@
   </footer>
 </div>
 
-<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
 <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
 <script src="../js/chapter_img_random.js"></script>
